k8s/bases/docker-registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: docker-registry-cert-issuer
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-body-size: "900m" # allows limiting data sent per req
    # TODO: add http auth: nginx.ingress.kubernetes.io/auth-tls-secret: "<namespace>/<secretName>"
spec:
  tls:
  - hosts:
    - registry.izelnakri.com
    secretName: docker-registry-cert
  rules:
  - host: registry.izelnakri.com
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
